--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -167,26 +167,24 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      # - destroy-environment:
-      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       # Here's where you will add some code to rollback on failure
 
   configure-infrastructure:
     docker:
-      - image: python:3.7-alpine3.16
-      # - image: cimg/base:stable
+      # - image: python:3.7-alpine3.16
+      - image: cimg/base:stable
     steps:
       - checkout
       - add_ssh_keys:
           fingerprints: ["8c:03:8f:fa:8d:8a:73:41:37:6a:15:36:fc:6d:52:3a"]
       - attach_workspace:
           at: ~/
-      # - install_aws-cli
-      # - install_ansible
       - run:
           name: Install dependencies
           command: |
-            sudo apt -y install ansible tar gzip
+            apk add --update ansible tar gzip
       - run:
           name: confirm inventory ip addreess
           command: |
