--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,33 @@
 version: 2.1
 
 commands:
-  destroy-environment:
+  destroy_environment:
     description: Destroy backend and front-end cloudformation stacks given a workflow ID.
-    parameters:
-      stack-name:
-        description: |
-          --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}"
-          --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}"
-        type: string   
+    # parameters:
+    #   stack-name:
+    #     description: |
+    #       aws cloudformation delete-stack \
+    #       --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+    #       --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}"
+    #     type: string   
     steps:
       - run:
           name: Destroy environments
-          # when: on_fail
+          when: on_fail
           command: |
             aws cloudformation delete-stack \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}"
             aws cloudformation delete-stack \
               --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}"
 
-  revert-migrations:
+  revert_migrations:
     description: Revert the last migration if successfully run in the current workflow.
     # parameters:
       # Add parameter here     
     steps:
       - run:
           name: Revert migrations
-          # Add when this will run
+          # when: 
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
             SUCCESS = 1
@@ -213,22 +214,25 @@ jobs:
       # - destroy-environment
       # - revert-migration
 
-#   run-migrations:
-#     docker:
-#       # Docker image here that supports NodeJS
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Run migrations
-#           command: |
-#             # Your code here
-#             exit 1
-#       - run:
-#           name: Send migration results to memstash
-#           command: |
-#             # Your code here
-#             exit 1
-#      # Here's where you will add some code to rollback on failure      
+  run-migrations:
+    docker:
+      - image: node:alpine
+    steps:
+      - checkout
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm install
+            # Run and save the migration output
+            npm run migrations > migrations_dump.txt
+      - run:
+          name: Send migration results to kvdb.io OR memstash.io
+          command: |
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            then
+              curl https://kvdb.io/9bL3qcS3G4YhbiEwh1vnVf/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+            fi
 
 #   deploy-frontend:
 #     docker:
@@ -343,8 +347,8 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      # - run-migrations:
-      #     requires: [configure-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
       # - deploy-frontend:
       #     requires: [run-migrations]
       # - deploy-backend:
