--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -217,7 +217,7 @@ jobs:
 
   deploy-frontend:
     docker:
-      - image: awscli
+      - image: amazon/awscli:latest
     steps:
       - checkout
       - run:
@@ -246,10 +246,8 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}" tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      - destroy_environment:
-          when: on_fail
-      - revert_migrations:
-          when: on_fail
+      # - destroy_environment:
+      # - revert_migrations:
 
 #   deploy-backend:
 #     docker:
