--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -15,7 +15,13 @@
   apt: 
     name: ["python", "ansible", "nodejs", "npm", "aws-cli"] 
     state: present 
-    update_cache: yes 
+    update_cache: yes
+
+- name: "install python for ansible"
+  become: true
+  apt:
+    name: python3
+    state: latest
 
 # - name: "install pm2" 
 #   become: true 
