--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,10 +223,10 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update python3.7
-            apk add --update nodejs
-            apk add --update ansible
-            apk add --update npm
+            yum install -y python3
+            apk install -y nodejs
+            apk install -y ansible
+            apk install -y npm
             pip install awscli
       - run:
           name: Get backend url
