--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -226,8 +226,8 @@ jobs:
           command: |
             yum install -y python3
             yum install -y nodejs
-            yum install -y ansible
             yum install -y npm
+            yum install -y ansible
             yum install tar gzip
       - run:
           name: Get backend url
@@ -238,6 +238,7 @@ jobs:
             export API_URL="http://${BACKEND_IP}:3030"
             echo "API_URL = ${API_URL}"
             echo API_URL="http://${BACKEND_API}:3030" >> frontend/.env
+            echo $BACKEND_IP > ~/backend_ip.txt
             cat frontend/.env
       - run:
           name: Deploy frontend objects
