--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -224,7 +224,8 @@ jobs:
 
   deploy-frontend:
     docker:
-      - image: amazon/aws-cli
+      - image: python:3.7-alpine3.11
+      # - image: amazon/aws-cli
       # - image: python3.9.1-alpine3.12
     steps:
       - checkout
@@ -233,11 +234,17 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            yum install -y tar
-            yum install -y gzip
-            yum install -y nodejs
-            yum install -y npm
-            yum install -y ansible
+             apk add --update tar
+             apk add --update gzip
+             pip install awscli
+             apk add --update nodejs
+             apk add --update npm
+             apk add --update ansible
+            # yum install -y tar
+            # yum install -y gzip
+            # yum install -y nodejs
+            # yum install -y npm
+            # yum install -y ansible
       - run:
           name: Get backend url
           command: |
