--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,13 @@ orbs:
   aws-cli: circleci/aws-cli@3.1.1
 
 commands:
-  notify_on_failure:
+  notify-on-failure:
     steps:
       - slack/notify:
           event: fail
           channel: CircleCi-Behordeun
           template: basic_fail_1
-  install_awscli:
+  install-awscli:
     description: Install AWS CLI v2
     steps:
       - run:
@@ -20,7 +20,7 @@ commands:
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
             sudo ./aws/install
-  install_ansible:
+  install-ansible:
     description: Install Ansible
     steps:
       - run:
