--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -23,10 +23,10 @@
     name: python3
     state: latest
 
-# - name: "install pm2" 
-#   become: true 
-#   npm: 
-#     name: pm2 
-#     global: yes 
-#     production: yes 
-#     state: present 
+- name: "install pm2" 
+  become: true 
+  npm: 
+    name: pm2 
+    global: yes 
+    production: yes 
+    state: present
