--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,14 +253,14 @@ jobs:
       - run:
           name: Install tar and gzip
           command: |
-            # yum install -y tar gzip
+            yum install -y tar gzip
       - attach_workspace:
           at: ~/
       - run:
           name: Install dependencies
           command: |
-            # curl sL https://rpm.nodesource.com/setup_16.x | bash -
-            # yum install nodejs -y
+            curl sL https://rpm.nodesource.com/setup_16.x | bash -
+            yum install nodejs -y
       - run:
           name: Get backend url
           command: |
