--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -302,15 +302,15 @@ jobs:
           name: Deploy backend
           command: |
             cd backend
-            npm install
-            npm fix audit
+            npm i
+            # npm fix audit
             npm run build
-            ls -l
+            # ls -lh
             cd ..
             tar -C backend -czvf artifact.tar.gz .
             tar -ztvf artifact.tar.gz
-            mkdir .circleci/ansible/roles/deploy/files/
-            mv artifact.tar.gz .circleci/ansible/roles/deploy/files/
+            # mkdir .circleci/ansible/roles/deploy/files/
+            # mv artifact.tar.gz .circleci/ansible/roles/deploy/files/
             cd .circleci/ansible
             echo "Contents of the inventory.txt file is -------"
             cat inventory.txt
