--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -303,14 +303,12 @@ jobs:
           command: |
             cd backend
             npm i
-            # npm fix audit
             npm run build
-            # ls -lh
             cd ..
             tar -C backend -czvf artifact.tar.gz .
             tar -ztvf artifact.tar.gz
-            # mkdir .circleci/ansible/roles/deploy/files/
-            # mv artifact.tar.gz .circleci/ansible/roles/deploy/files/
+            mkdir .circleci/ansible/roles/deploy/files/
+            mv artifact.tar.gz .circleci/ansible/roles/deploy/files/
             cd .circleci/ansible
             echo "Contents of the inventory.txt file is -------"
             cat inventory.txt
