--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -9,7 +9,8 @@
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
   roles:
-    - deploy: 
-        npm install
-        pm2 stop default
-        pm2 start npm -- start
+    - deploy
+    # - deploy: 
+    #     npm install
+    #     pm2 stop default
+    #     pm2 start npm -- start
