--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -222,6 +222,7 @@ jobs:
           name: configure server
           command: |
             cd .circleci/ansible
+            cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment
 
@@ -266,21 +267,27 @@ jobs:
           command: |
             export BACKEND_IP=$(aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filters "Name=tag:project,Values=udapeople" --output text)
+            --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --output text)
+            # --filters "Name=tag:project,Values=udapeople" --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "API_URL = ${API_URL}"
-            # echo API_URL="http://${BACKEND_API}:3030" >> frontend/.env
-            # echo $BACKEND_IP > ~/backend_ip.txt
-            # cat frontend/.env
+            echo API_URL="http://${BACKEND_API}:3030" >> frontend/.env
+            echo $BACKEND_IP > ~/backend_ip.txt
+            cat frontend/.env
       - run:
           name: Deploy frontend objects
           command: |
-            # cd frontend
-            # npm install
-            # npm run build
-            # tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-            # aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      - notify-on-failure
+            cd frontend
+            npm install
+            npm run build
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+      # - notify-on-failure
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - backend_ip.txt
       - destroy-environment
       - revert-migrations
 
@@ -303,8 +310,11 @@ jobs:
           command: |
             cd backend
             npm i
+            # npm fix audit
             npm run build
+            # ls -lh
             cd ..
+            # pwd
             tar -C backend -czvf artifact.tar.gz .
             tar -ztvf artifact.tar.gz
             mkdir .circleci/ansible/roles/deploy/files/
@@ -337,7 +347,7 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-            # export BACKEND_IP=$(cat ~/backend_ip.txt)
+            export BACKEND_IP=$(cat ~/backend_ip.txt)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
             if curl "${API_URL}/api/status" | grep "ok"
